sized up arrows, changed margins timer, fixed bug wordwrap

--- a/src/LengthControl.css
+++ b/src/LengthControl.css
@@ -15,6 +15,7 @@
 }
 
 .length-control {
-    width: 250px;
-    font-size: 4vh;
+    width: 27vh;
+    font-size: 3vh;
 }
+
