--- a/src/Timer.css
+++ b/src/Timer.css
@@ -5,7 +5,8 @@
     height: 140px;
     font-size: 4vh;
     display: inline-block;
-    margin: 50px;
+    margin-top: 50px;
+    margin-bottom: 40px;
 }
 
 #timer-label {
